# coser

./: .gitignore  README.md  local.hs  stack.yaml  store.cabal
cbits/: Auth.cpp  Auth.h  CosDefines.h  CosSysConfig.cpp  CosSysConfig.h
cbits/util/: CodecUtil.cpp  CodecUtil.h  FileUtil.cpp  FileUtil.h  Sha1.cpp  StringUtil.cpp  StringUtil.h  true_random.cpp
lib/Com/YS/: Store.hs
lib/Com/YS/Store/: Local.hs  QCloud.hs
lib/Com/YS/Store/QCloud/: FuseOps.hs  Internal.hs
lib/Data/: Store.hs
lib/Data/Store/: Local.hs  QCloud.hs
lib/Data/Store/QCloud/: FuseOps.hs  Internal.hs
src/: Main.hs
test/: test-store.hs
