name:                store
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              uuhan
synopsis:            远算对象存储Fuse系统
description:         使用腾讯云
maintainer:          mxu@lambdacal.com
copyright:           2017 Author name here
category:            System
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md cbits/*.cpp cbits/*.h cbits/util/*.cpp cbits/util/*.h

flag local
    default: False
    description: Local Test

executable store
    hs-source-dirs:         src
    main-is:                Main.hs
    default-language:       Haskell2010
    default-extensions:     OverloadedStrings, QuasiQuotes
    build-depends:          base >= 4.7 && < 5
                          , store
                          , HFuse
                          , optparse-applicative
                          , protolude
                          , unix
                          , text

executable local
    hs-source-dirs:         .
    main-is:                local.hs
    default-language:       Haskell2010
    default-extensions:     OverloadedStrings
    build-depends:          base >= 4.7 && < 5
                          , wai
                          , wai-extra
                          , aeson
                          , warp
                          , http-types
                          , directory
    if flag(local)
        buildable:          True
    else
        buildable:          False

library
    hs-source-dirs:         lib
    c-sources:              cbits/Auth.cpp
                          , cbits/CosSysConfig.cpp
                          , cbits/util/CodecUtil.cpp
                          , cbits/util/Sha1.cpp
                          , cbits/util/FileUtil.cpp
                          , cbits/util/true_random.cpp
                          , cbits/util/StringUtil.cpp
    include-dirs:           cbits
    default-language:       Haskell2010
    ghc-options:            -Wall
    exposed-modules:        Com.YS.Store
                          , Com.YS.Store.QCloud
                          , Com.YS.Store.QCloud.FuseOps
                          , Com.YS.Store.QCloud.Internal
                          , Com.YS.Store.Local
    extra-libraries:        stdc++ ssl crypto
    -- pkgconfig-depends:      openssl
    other-modules:          Paths_store
    default-extensions:     OverloadedStrings
    build-depends:          base >=4.7 && < 5
                          , HFuse >=0.2.4.5
                          , curl >=1.3.8
                          , bytestring >=0.10.8.1
                          , unix >=2.7.2.1
                          , aeson

test-suite test
    type:                   exitcode-stdio-1.0
    main-is:                test-store.hs
    hs-source-dirs:         test
    default-language:       Haskell2010
    ghc-options:            -Wall
    build-depends:          base == 4.*
                          , store
                          , tasty
